<resources>
    <string name="app_name">Over Music</string>
    <string name="setting">设置</string>
    <string name="about_developer">关于开发者</string>
    <string name="about_app">关于APP</string>
    <string name="clean_cache">清理缓存</string>
    <string name="exit">退出</string>
    <string name="change_color">换肤</string>
    <string name="scane_music">扫描歌曲</string>
    <string name="others">其他</string>
    <string name="upgrade">检查更新</string>
    <string name="song">song</string>
    <string name="info">info</string>
    <string name="music_text">啊啦，乐库是空的~</string>
    <string name="permission_info">啊啦，没获得权限~</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="music">音乐</string>
    <string name="album">专辑</string>
    <string name="artist">歌手</string>
    <string name="list">列表</string>
    <string name="search">搜索</string>

    <string name="play">播放</string>
    <string name="add_to_playing_list">添加到播放列表</string>
    <string name="set_as_ring">设置为铃声</string>
    <string name="next_play">设为下一曲播放</string>
    <string name="see_artist">查看同歌手更多歌曲</string>
    <string name="see_album">查看同专辑更多歌曲</string>
    <string name="string_open">打开</string>
    <string name="string_play_album">播放专辑</string>
    <string name="string_set_list">设置为播放列表</string>
    <string name="string_add_to_list">全部添加到列表…</string>
    <string name="string_save_book">保存封面</string>
    <string name="string_delete">删除</string>

    <string name="string_save_success">保存成功~</string>
    <string name="string_save_fail">该图片无法保存</string>

    <string name="string_play_artist">播放全部音乐</string>

    <string name="string_queue">排序方式</string>

    <string name="string_new_list">新建列表</string>
    <string name="string_rename">重命名</string>

    <string name="string_play_all">全部播放</string>

    <string name="string_no_search_info">没找到任何相关信息呢= =换一种姿势试试</string>

    <string name="string_playing_list">播放列表</string>

    <string name="string_used">使用中</string>
    <string name="string_about_me">关于开发者</string>
    <string name="string_about_me_contain">
        各位好，我是OverMusic的开发者，legend。\n
        目前为大三狗，拥有一年半的开发经验，开发过Android应用以及Javaweb。\n
        \n
        爱好：\n
        音乐!无音乐不生活!\n
        番剧!无番不嗨!\n
        游戏!no game no life!\n
        漫画!追漫至死!\n
        \n
        座右铭：\n
        奇迹并非偶然，而是努力的结晶!\n
        \n
        联系方式：\n
        liuzhu234@gmail.com\n

    </string>

    <string name="string_about_app_info">关于本APP</string>
    <string name="string_about_app_contain">
        这个APP算是一个夙愿。\n
        对我来说，音乐播放器只是一个开始，只是，年轻的我小瞧了这个开始，才会有了现在这个APP的诞生。\n
        早在一年前，我就写过一个音乐播放器，当时的目标就是当成自己的结课作业去完成它，当然最后没能真正完成。\n
        半年前，我又写了一个播放器，不过那个是非常随性的一个作品，所以也没敢把它发布出去。\n
        这次再次启动相似的项目，原因有二。\n
        一是启动项目的时间，2018年1月27日，正值寒假，在家休息一周的我感受到了可怕的压抑，闲得太久，怕自己技艺生疏，更何况写代码这种事情有如逆水行舟，不进则退，所以更不敢偷懒下去。\n
        二是心之所向。一直以来，都没有好好要求过自己，也没有什么好作品可以拿得出手，所以在项目开始之前的几天，我都在不断反思，要做一个怎样的APP，又要以怎样的理念去做。所以，我给自己定了个理念，匠心。\n
        以一颗匠心，去好好地写一个作品出来。\n
        所以，整个寒假几乎都花在了上面，甚至是过年那几天，脑子里都还是我项目里的bug，搞得我头疼不已。\n
        外加上，我本以为寒假可以写两个项目，却不想这一个都没能完成，另一个更是不敢开始，怕自己过完年就秃咯。\n
        扯远了，话虽如此，可写到这里我才发现，其实写得也不怎样，挺多功能在现阶段都无法完成，可能会在之后的更新慢慢补全。\n
        紧靠自己的理念，才发现想要做到这一点真的很难。王爵nice大佬曾经说过，坚持这件事本身就很难，当时我自己也认为这句话很对，而现在我认为，匠心这两个字也很难。\n
        但是，我不会屈服的！\n

    </string>

    <string name="test">我想无论是谁，都想获得永远吧</string>
    <string name="artist_name">——渐渐被你吸引</string>

</resources>
